login/login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-login
  namespace: sso
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sso-login
  template:
    metadata:
      labels:
        app: sso-login
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
      - name: sso-login
        image: docker.prayujt.com/sso-login
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sso-login
  namespace: sso
spec:
  selector:
    app: sso-login
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
